[REFACTOR] refactor find by name, add findall() for items, not my responsibility :D